<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- devicelist ui -->
    <string name="highQualityVideo">高清视频流</string>
    <string name="routeDelayName">路由器延迟:</string>
    <string name="routeDelay">未连接</string>
     <string name="ms">毫秒</string>
    <string name="autoOpenDhcp">自动开启DHCP</string>
    <string name="setting">设置</string>
    <string name="checkUpdate">检查更新</string>
    <string name="download_error">下载出错</string>
    <string name="app_name">配置工具</string>
    <string name="scan_camera">扫描摄像头</string>
    <string name="scan_wifi">扫描Wifi</string>
    <string name="reboot_camera">重启摄像头</string>
    <string name="sureReboot">确定重启该摄像头吗?</string>
    <string name="invalidInfo">无效的信息</string>
    <string name="rebootting">正在重启</string>
    <string name="reboottingSucceed">重启成功</string>
    <string name="reboottingFailed">重启失败</string>
    <string name="scan_box">扫描盒子</string>
    <string name="exit">退出</string>
    <string name="device_scaned">扫描到的设备:</string>
    <string name="enterButton">确认</string>
    <string name="cancelButton">取消</string>
    <string name="scanOnlineCameraFailed">扫描失败,请重试!</string>
     <string name="scaned">扫描完成!</string>
    <string name="canNotScaned">扫到设备出现问题!</string>
    <string name="appUpdate">软件更新</string>
    <string name="appUpdateNow">检测到新版本,推荐更新</string>
    <string name="appUpdateLater">稍后更新</string>
    <string name="update">立即更新</string>
    <string name="downloading">正在下载</string>
	<string name="unscanedInfo">亲,请检查一下:\n
	    														1.网络信号良好\n
	    														2.手机和设备在同一网络内\n
	    														3.设备电源和网络连接正常</string>
    <!-- camera -->
    <string name="online">总数:</string>
    <string name="invalideInfo">无效的信息</string>
    <string name="cameraInfo">摄像头信息</string>
    <string name="wifiList">Wifi列表</string>
    <string name="unrecognize">未识别</string>
    <string name="cameraName">摄像头名称:</string>
    <string name="cameraIP">摄像头IP:</string>
    <string name="cameraMAC">摄像头MAC:</string>
    <string name="cameraNet">网络连接:</string>
    <string name="cameraSN">摄像头SN:</string>
    <string name="waitForReboot">(待重启)</string>
    <string name="unName">未命名</string>
    <string name="unconnWifi">未连接Wifi</string>
    <string name="scanning">正在扫描</string>
    <string name="gettingDeviceInfo">正在获取设备信息</string>
    <string name="openningDhcpWifi">正在打开DHCP和Wifi</string>
    <string name="scanedWifi">找到的Wifi</string>
    <string name="settingWifi">设置Wifi中..</string>
    <string name="connected">已连接</string>
    <string name="validPassword">请确保输入密码正确!</string>
    <string name="connectWifiFailed">连接失败</string>
    <string name="password">输入密码</string>
    <string name="inputDesc">输入密码</string>
    <string name="cameraRssi">信号强度</string>
    <string name="pleaseWait">请等待.....</string>
    <string name="cameraVideo">查看视频</string>
    <string name="cameraAngle">控制角度</string>
    <string name="cameraVideoCtrl">视频配置</string>
    <string name="invalidVideoRtsp">无效的视频流地址!</string>
    <string name="ctrlPtzUp">向上</string>
    <string name="ctrlPtzDown">向下</string>
    <string name="ctrlPtzLeft">向左</string>
    <string name="ctrlPtzRight">向右</string>
    <string name="ctrlPtzZoomIn">缩进</string>
    <string name="ctrlPtzZoomOut">缩放</string>
    <string name="ctrlPtzSave">保存</string>
    <string name="ctrlPtzHome">初始</string>
    <string name="osdChange">水印</string>
    <string name="osdTitle">设置水印</string>
    <string name="osdChanging">正在设置水印</string>
    <string name="presetPtzSucceed">设置摄像头位置成功!</string>
    <string name="presetPtzFailed">设置摄像头位置失败!</string>
        <string name="changeOSDSucceed">设置水印成功!</string>
    <string name="changeOSDFailed">设置水印失败!</string>
    <!-- datadroid exception -->
    <string name="dialog_error_title">错误</string>
    <string name="progress_dialog_title">加载中</string>
    <string name="dialog_error_connection_error_title">连接错误</string>
    <string name="dialog_error_connection_error_message">发生一个连接错误. 请检查你连接的网络状态!.</string>
    <string name="dialog_button_retry">重试</string>
    <string name="dialog_error_data_error_title">数据错误</string>
    <string name="dialog_error_data_error_message">接收到无效数据</string>
    <!-- vitamio string -->
        <string name="vitamio_library_app_name">VitamioLibrary</string>
    <string name="vitamio_init_decoders">Initializing decoders…</string>
    <string name="permission_group_tools_label">Vitamio tools</string>
    <string name="permission_group_tools_description">Access Vitamio package and resources.</string>
    <string name="permission_receive_messages_label">Receive Vitamio messages</string>
    <string name="permission_receive_messages_description">Receive all broadcasts from Vitamio service.</string>
    <string name="permission_write_providers_label">Write Vitamio providers</string>
    <string name="permission_write_providers_description">Delete, update or create new items in Vitamio providers.
    </string>
    <string name="VideoView_error_title">Cannot play video</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to
        this device.
    </string>
    <string name="VideoView_error_text_unknown">Sorry, this video cannot be played.</string>
    <string name="VideoView_error_button">OK</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>
    
</resources>
